--- a/FrontEnd/Website_Code/carStyle.css
+++ b/FrontEnd/Website_Code/carStyle.css
@@ -101,7 +101,7 @@ buttonGame {
     margin: 8px 0;
     border: none;
     cursor: pointer;
-    width: 100%;
+    width: auto;
     font-size: 24px;
     text-align: center;
     border: none;
@@ -110,7 +110,7 @@ buttonGame {
     top: 60%;
     left: 48%;
     position: absolute;
-    transform: translate(-80%,80%);
+    transform: translate(-120%,80%);
     margin-top: 450px;
 }
 
@@ -125,7 +125,7 @@ buttonStat {
     margin: 8px 0;
     border: none;
     cursor: pointer;
-    width: 100%;
+    width: auto;
     font-size: 24px;
     text-align: center;
     border: none;
@@ -134,7 +134,7 @@ buttonStat {
     top: 60%;
     left: 50%;
     position: absolute;
-    transform: translate(130%,80%);
+    transform: translate(70%,80%);
     margin-top: 450px;
 }
 
