--- a/FrontEnd/carStyle.css
+++ b/FrontEnd/carStyle.css
@@ -115,6 +115,29 @@ body {
     transform: translate(-0%,-125%);
 }
 /*Game_Lobby*/
+buttonLogout {
+    background-color: red;
+    color: white;
+    padding: 20px 26px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: auto;
+    font-size: 24px;
+    text-align: center;
+    border: none;
+    border-radius: 15px;
+    position: absolute;
+    top: 60%;
+    left: 48%;
+    position: absolute;
+    transform: translate(-225%,80%);
+    margin-top: 450px;
+}
+
+    buttonLogout:hover {
+        opacity: 0.8;
+    }
 
 buttonGame {
     background-color: red;
@@ -132,7 +155,7 @@ buttonGame {
     top: 60%;
     left: 48%;
     position: absolute;
-    transform: translate(-120%,80%);
+    transform: translate(-35%,80%);
     margin-top: 450px;
 }
 
@@ -156,7 +179,7 @@ buttonStat {
     top: 60%;
     left: 50%;
     position: absolute;
-    transform: translate(70%,80%);
+    transform: translate(120%,80%);
     margin-top: 450px;
 }
 
