--- a/FrontEnd/carStyle.css
+++ b/FrontEnd/carStyle.css
@@ -256,6 +256,38 @@ buttonStat {
     height:200px;
     width: 200px;
 }
+
+h2 {
+    text-align: left;
+    text-transform: uppercase;
+    color: white;
+    transform: translate(13%, -80%)
+}
+
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=submit] {
+    width: 100%;
+    background-color: red;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+    input[type=submit]:hover {
+        background-color: red;
+    }
 /*Logout*/
 .topPage {
     background: black;
